[package]
name = "taco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = "0.5.15"
hyper = {version = "0.14.20", features=["full"]}
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = {version = "1.20.1", features=["full"]}
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
